[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/ambientcg/downloader.gd" type="Script" id=1]
[ext_resource path="res://addons/ambientcg/asset/freeroad.regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/ambientcg/asset/plugin-icon-big.png" type="Texture" id=3]
[ext_resource path="res://addons/ambientcg/drag.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 2 )

[node name="downloader" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 7.0
margin_right = 115.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 5 )
text = "1K-JPG"

[node name="action" type="Button" parent="."]
margin_left = 119.0
margin_right = 194.0
margin_bottom = 50.0
text = "Download"

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 198.0
margin_right = 298.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )

[node name="size_label" type="Label" parent="."]
margin_left = 302.0
margin_top = 17.0
margin_right = 350.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 7 )
text = "1K-JPG"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true

[node name="message" type="Label" parent="."]
margin_left = 354.0
margin_top = 16.0
margin_right = 354.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 6 )

[node name="import" type="Button" parent="."]
visible = false
margin_left = 288.0
margin_right = 343.0
margin_bottom = 50.0
text = "import"

[node name="open_dir" type="Button" parent="."]
visible = false
margin_left = 288.0
margin_right = 398.0
margin_bottom = 50.0
text = "Open Directory"

[node name="file_exist_checker" type="Timer" parent="."]
wait_time = 0.3

[node name="drag" type="TextureRect" parent="."]
visible = false
margin_left = 306.0
margin_top = 4.0
margin_right = 348.0
margin_bottom = 46.0
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="import_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="button_up" from="action" to="." method="_on_action_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="button_up" from="import" to="." method="_on_import_button_up"]
[connection signal="button_up" from="open_dir" to="." method="_on_open_dir_button_up"]
[connection signal="timeout" from="file_exist_checker" to="." method="_on_file_exist_checker_timeout"]
